// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Search renders correctly when disabled 1`] = `
<div
  aria-busy={false}
  className="input-component search_component_wrapper search__main_wrapper search__hidden input-component--disabled"
  role="search"
>
  <div
    className="input-component__label--wrapper"
  >
    <div
      className="input-component__input-wrapper input-component__input-wrapper--size-large search-wrapper search-wrapper-hidden"
    >
      <input
        aria-activedescendant=""
        aria-invalid={null}
        aria-label=""
        aria-owns=""
        autoComplete="off"
        className="search_component input-component__input hide-text-field-component input-component__input--has-icon"
        data-testid="search_search"
        disabled={true}
        id="search"
        maxLength={null}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        placeholder=""
        readOnly={false}
        required={false}
        role=""
        type="search"
        value=""
      />
      <div
        className="l3-style-clickable input-component__icon--container input-component__icon--container-has-icon input-component__icon--container-active search_icon l3-style-clickable--disable-text-selection"
        data-testid="clickable"
        onClick={[Function]}
        onKeyDown={[Function]}
        onMouseDown={[Function]}
        role="button"
        tabIndex="-1"
      >
        <svg
          aria-hidden={true}
          aria-label="Search"
          className="icon_component input-component__icon icon_component--no-focus-style"
          fill="currentColor"
          height="18px"
          id="search"
          onClick={[Function]}
          viewBox="0 0 40 40"
          width="18px"
        >
          <g
            filter="url(#filter0_bd_718_13606)"
          >
            <path
              clipRule="evenodd"
              d="M32 20C32 26.5649 26.5728 32 19.999 32C13.4368 32 8 26.5649 8 20C8 13.4256 13.4273 8 19.9894 8C26.5632 8 32 13.4256 32 20ZM13.7282 18.6793C13.7282 21.4323 15.9931 23.7028 18.7512 23.7028C19.6819 23.7028 20.5566 23.4258 21.3024 22.9767L24.2163 25.8772C24.4791 26.1475 24.7661 26.2742 25.1333 26.2742C25.7832 26.2742 26.2408 25.7878 26.2408 25.1147C26.2408 24.8162 26.1131 24.5292 25.8863 24.2951L22.9711 21.3606C23.472 20.5968 23.7763 19.6661 23.7763 18.6793C23.7763 15.9073 21.5135 13.6422 18.7512 13.6422C15.9931 13.6422 13.7282 15.9168 13.7282 18.6793ZM21.9701 18.6793C21.9701 20.4447 20.5143 21.908 18.7512 21.908C16.9807 21.908 15.5229 20.4447 15.5229 18.6793C15.5229 16.9045 16.9807 15.4412 18.7512 15.4412C20.5143 15.4412 21.9701 16.8949 21.9701 18.6793Z"
              fill="#fff"
              fillRule="evenodd"
            />
          </g>
          <defs>
            <filter
              colorInterpolationFilters="sRGB"
              filterUnits="userSpaceOnUse"
              height="60"
              id="filter0_bd_718_13606"
              width="60"
              x="-10"
              y="-10"
            >
              <feFlood
                floodOpacity="0"
                result="BackgroundImageFix"
              />
              <feGaussianBlur
                in="BackgroundImageFix"
                stdDeviation="5"
              />
              <feComposite
                in2="SourceAlpha"
                operator="in"
                result="effect1_backgroundBlur_718_13606"
              />
              <feColorMatrix
                in="SourceAlpha"
                result="hardAlpha"
                values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0"
              />
              <feOffset
                dy="1"
              />
              <feGaussianBlur
                stdDeviation="1.5"
              />
              <feColorMatrix
                values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0.2 0"
              />
              <feBlend
                in2="effect1_backgroundBlur_718_13606"
                result="effect2_dropShadow_718_13606"
              />
              <feBlend
                in="SourceGraphic"
                in2="effect2_dropShadow_718_13606"
                result="shape"
              />
            </filter>
          </defs>
        </svg>
      </div>
      <div
        className="l3-style-clickable input-component__icon--container input-component__icon--container-has-icon search-icon l3-style-clickable--disable-text-selection"
        data-testid="clean-search-button_search"
        onClick={[Function]}
        onKeyDown={[Function]}
        onMouseDown={[Function]}
        role="button"
        tabIndex="-1"
      >
        <svg
          aria-hidden={true}
          aria-label="Clear Search"
          className="icon_component input-component__icon icon_component--no-focus-style"
          fill="currentColor"
          height="18px"
          id="search"
          onClick={[Function]}
          viewBox="0 0 20 20"
          width="18px"
        >
          <path
            clipRule="evenodd"
            d="M6.53033 5.46967C6.23744 5.17678 5.76256 5.17678 5.46967 5.46967C5.17678 5.76256 5.17678 6.23744 5.46967 6.53033L8.62562 9.68628L5.47045 12.8415C5.17756 13.1343 5.17756 13.6092 5.47045 13.9021C5.76334 14.195 6.23822 14.195 6.53111 13.9021L9.68628 10.7469L12.8415 13.9021C13.1343 14.195 13.6092 14.195 13.9021 13.9021C14.195 13.6092 14.195 13.1343 13.9021 12.8415L10.7469 9.68628L13.9029 6.53033C14.1958 6.23744 14.1958 5.76256 13.9029 5.46967C13.61 5.17678 13.1351 5.17678 12.8422 5.46967L9.68628 8.62562L6.53033 5.46967Z"
            fill="currentColor"
            fillRule="evenodd"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`Search renders correctly when underline 1`] = `
<div
  aria-busy={false}
  className="input-component search_component_wrapper search__main_wrapper search__hidden"
  role="search"
>
  <div
    className="input-component__label--wrapper"
  >
    <div
      className="input-component__input-wrapper input-component__input-wrapper--size-large search-wrapper search-wrapper-hidden"
    >
      <input
        aria-activedescendant=""
        aria-invalid={null}
        aria-label=""
        aria-owns=""
        autoComplete="off"
        className="search_component input-component__input hide-text-field-component input-component__input--has-icon"
        data-testid="search_search"
        disabled={false}
        id="search"
        maxLength={null}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        placeholder=""
        readOnly={false}
        required={false}
        role=""
        type="search"
        value=""
      />
      <div
        className="l3-style-clickable input-component__icon--container input-component__icon--container-has-icon input-component__icon--container-active search_icon l3-style-clickable--disable-text-selection"
        data-testid="clickable"
        onClick={[Function]}
        onKeyDown={[Function]}
        onMouseDown={[Function]}
        role="button"
        tabIndex="-1"
      >
        <svg
          aria-hidden={true}
          aria-label="Search"
          className="icon_component input-component__icon icon_component--no-focus-style"
          fill="currentColor"
          height="18px"
          id="search"
          onClick={[Function]}
          viewBox="0 0 40 40"
          width="18px"
        >
          <g
            filter="url(#filter0_bd_718_13606)"
          >
            <path
              clipRule="evenodd"
              d="M32 20C32 26.5649 26.5728 32 19.999 32C13.4368 32 8 26.5649 8 20C8 13.4256 13.4273 8 19.9894 8C26.5632 8 32 13.4256 32 20ZM13.7282 18.6793C13.7282 21.4323 15.9931 23.7028 18.7512 23.7028C19.6819 23.7028 20.5566 23.4258 21.3024 22.9767L24.2163 25.8772C24.4791 26.1475 24.7661 26.2742 25.1333 26.2742C25.7832 26.2742 26.2408 25.7878 26.2408 25.1147C26.2408 24.8162 26.1131 24.5292 25.8863 24.2951L22.9711 21.3606C23.472 20.5968 23.7763 19.6661 23.7763 18.6793C23.7763 15.9073 21.5135 13.6422 18.7512 13.6422C15.9931 13.6422 13.7282 15.9168 13.7282 18.6793ZM21.9701 18.6793C21.9701 20.4447 20.5143 21.908 18.7512 21.908C16.9807 21.908 15.5229 20.4447 15.5229 18.6793C15.5229 16.9045 16.9807 15.4412 18.7512 15.4412C20.5143 15.4412 21.9701 16.8949 21.9701 18.6793Z"
              fill="#fff"
              fillRule="evenodd"
            />
          </g>
          <defs>
            <filter
              colorInterpolationFilters="sRGB"
              filterUnits="userSpaceOnUse"
              height="60"
              id="filter0_bd_718_13606"
              width="60"
              x="-10"
              y="-10"
            >
              <feFlood
                floodOpacity="0"
                result="BackgroundImageFix"
              />
              <feGaussianBlur
                in="BackgroundImageFix"
                stdDeviation="5"
              />
              <feComposite
                in2="SourceAlpha"
                operator="in"
                result="effect1_backgroundBlur_718_13606"
              />
              <feColorMatrix
                in="SourceAlpha"
                result="hardAlpha"
                values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0"
              />
              <feOffset
                dy="1"
              />
              <feGaussianBlur
                stdDeviation="1.5"
              />
              <feColorMatrix
                values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0.2 0"
              />
              <feBlend
                in2="effect1_backgroundBlur_718_13606"
                result="effect2_dropShadow_718_13606"
              />
              <feBlend
                in="SourceGraphic"
                in2="effect2_dropShadow_718_13606"
                result="shape"
              />
            </filter>
          </defs>
        </svg>
      </div>
      <div
        className="l3-style-clickable input-component__icon--container input-component__icon--container-has-icon search-icon l3-style-clickable--disable-text-selection"
        data-testid="clean-search-button_search"
        onClick={[Function]}
        onKeyDown={[Function]}
        onMouseDown={[Function]}
        role="button"
        tabIndex="-1"
      >
        <svg
          aria-hidden={true}
          aria-label="Clear Search"
          className="icon_component input-component__icon icon_component--no-focus-style"
          fill="currentColor"
          height="18px"
          id="search"
          onClick={[Function]}
          viewBox="0 0 20 20"
          width="18px"
        >
          <path
            clipRule="evenodd"
            d="M6.53033 5.46967C6.23744 5.17678 5.76256 5.17678 5.46967 5.46967C5.17678 5.76256 5.17678 6.23744 5.46967 6.53033L8.62562 9.68628L5.47045 12.8415C5.17756 13.1343 5.17756 13.6092 5.47045 13.9021C5.76334 14.195 6.23822 14.195 6.53111 13.9021L9.68628 10.7469L12.8415 13.9021C13.1343 14.195 13.6092 14.195 13.9021 13.9021C14.195 13.6092 14.195 13.1343 13.9021 12.8415L10.7469 9.68628L13.9029 6.53033C14.1958 6.23744 14.1958 5.76256 13.9029 5.46967C13.61 5.17678 13.1351 5.17678 12.8422 5.46967L9.68628 8.62562L6.53033 5.46967Z"
            fill="currentColor"
            fillRule="evenodd"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`Search renders correctly with className 1`] = `
<div
  aria-busy={false}
  className="input-component search_component_wrapper search__main_wrapper search__hidden"
  role="search"
>
  <div
    className="input-component__label--wrapper"
  >
    <div
      className="input-component__input-wrapper input-component__input-wrapper--size-large search-wrapper search-wrapper-hidden"
    >
      <input
        aria-activedescendant=""
        aria-invalid={null}
        aria-label=""
        aria-owns=""
        autoComplete="off"
        className="testClassName search_component input-component__input hide-text-field-component input-component__input--has-icon"
        data-testid="search_search"
        disabled={false}
        id="search"
        maxLength={null}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        placeholder=""
        readOnly={false}
        required={false}
        role=""
        type="search"
        value=""
      />
      <div
        className="l3-style-clickable input-component__icon--container input-component__icon--container-has-icon input-component__icon--container-active search_icon l3-style-clickable--disable-text-selection"
        data-testid="clickable"
        onClick={[Function]}
        onKeyDown={[Function]}
        onMouseDown={[Function]}
        role="button"
        tabIndex="-1"
      >
        <svg
          aria-hidden={true}
          aria-label="Search"
          className="icon_component input-component__icon icon_component--no-focus-style"
          fill="currentColor"
          height="18px"
          id="search"
          onClick={[Function]}
          viewBox="0 0 40 40"
          width="18px"
        >
          <g
            filter="url(#filter0_bd_718_13606)"
          >
            <path
              clipRule="evenodd"
              d="M32 20C32 26.5649 26.5728 32 19.999 32C13.4368 32 8 26.5649 8 20C8 13.4256 13.4273 8 19.9894 8C26.5632 8 32 13.4256 32 20ZM13.7282 18.6793C13.7282 21.4323 15.9931 23.7028 18.7512 23.7028C19.6819 23.7028 20.5566 23.4258 21.3024 22.9767L24.2163 25.8772C24.4791 26.1475 24.7661 26.2742 25.1333 26.2742C25.7832 26.2742 26.2408 25.7878 26.2408 25.1147C26.2408 24.8162 26.1131 24.5292 25.8863 24.2951L22.9711 21.3606C23.472 20.5968 23.7763 19.6661 23.7763 18.6793C23.7763 15.9073 21.5135 13.6422 18.7512 13.6422C15.9931 13.6422 13.7282 15.9168 13.7282 18.6793ZM21.9701 18.6793C21.9701 20.4447 20.5143 21.908 18.7512 21.908C16.9807 21.908 15.5229 20.4447 15.5229 18.6793C15.5229 16.9045 16.9807 15.4412 18.7512 15.4412C20.5143 15.4412 21.9701 16.8949 21.9701 18.6793Z"
              fill="#fff"
              fillRule="evenodd"
            />
          </g>
          <defs>
            <filter
              colorInterpolationFilters="sRGB"
              filterUnits="userSpaceOnUse"
              height="60"
              id="filter0_bd_718_13606"
              width="60"
              x="-10"
              y="-10"
            >
              <feFlood
                floodOpacity="0"
                result="BackgroundImageFix"
              />
              <feGaussianBlur
                in="BackgroundImageFix"
                stdDeviation="5"
              />
              <feComposite
                in2="SourceAlpha"
                operator="in"
                result="effect1_backgroundBlur_718_13606"
              />
              <feColorMatrix
                in="SourceAlpha"
                result="hardAlpha"
                values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0"
              />
              <feOffset
                dy="1"
              />
              <feGaussianBlur
                stdDeviation="1.5"
              />
              <feColorMatrix
                values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0.2 0"
              />
              <feBlend
                in2="effect1_backgroundBlur_718_13606"
                result="effect2_dropShadow_718_13606"
              />
              <feBlend
                in="SourceGraphic"
                in2="effect2_dropShadow_718_13606"
                result="shape"
              />
            </filter>
          </defs>
        </svg>
      </div>
      <div
        className="l3-style-clickable input-component__icon--container input-component__icon--container-has-icon search-icon l3-style-clickable--disable-text-selection"
        data-testid="clean-search-button_search"
        onClick={[Function]}
        onKeyDown={[Function]}
        onMouseDown={[Function]}
        role="button"
        tabIndex="-1"
      >
        <svg
          aria-hidden={true}
          aria-label="Clear Search"
          className="icon_component input-component__icon icon_component--no-focus-style"
          fill="currentColor"
          height="18px"
          id="search"
          onClick={[Function]}
          viewBox="0 0 20 20"
          width="18px"
        >
          <path
            clipRule="evenodd"
            d="M6.53033 5.46967C6.23744 5.17678 5.76256 5.17678 5.46967 5.46967C5.17678 5.76256 5.17678 6.23744 5.46967 6.53033L8.62562 9.68628L5.47045 12.8415C5.17756 13.1343 5.17756 13.6092 5.47045 13.9021C5.76334 14.195 6.23822 14.195 6.53111 13.9021L9.68628 10.7469L12.8415 13.9021C13.1343 14.195 13.6092 14.195 13.9021 13.9021C14.195 13.6092 14.195 13.1343 13.9021 12.8415L10.7469 9.68628L13.9029 6.53033C14.1958 6.23744 14.1958 5.76256 13.9029 5.46967C13.61 5.17678 13.1351 5.17678 12.8422 5.46967L9.68628 8.62562L6.53033 5.46967Z"
            fill="currentColor"
            fillRule="evenodd"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`Search renders correctly with icon 1`] = `
<div
  aria-busy={false}
  className="input-component search_component_wrapper search__main_wrapper search__hidden"
  role="search"
>
  <div
    className="input-component__label--wrapper"
  >
    <div
      className="input-component__input-wrapper input-component__input-wrapper--size-large search-wrapper search-wrapper-hidden"
    >
      <input
        aria-activedescendant=""
        aria-invalid={null}
        aria-label=""
        aria-owns=""
        autoComplete="off"
        className="search_component input-component__input hide-text-field-component input-component__input--has-icon"
        data-testid="search_search"
        disabled={false}
        id="search"
        maxLength={null}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        placeholder=""
        readOnly={false}
        required={false}
        role=""
        type="search"
        value=""
      />
      <div
        className="l3-style-clickable input-component__icon--container input-component__icon--container-has-icon input-component__icon--container-active search_icon l3-style-clickable--disable-text-selection"
        data-testid="clickable"
        onClick={[Function]}
        onKeyDown={[Function]}
        onMouseDown={[Function]}
        role="button"
        tabIndex="-1"
      >
        <span
          aria-hidden={true}
          aria-label="Search"
          className="icon_component input-component__icon icon_component--no-focus-style fa fa-star"
          id="search"
          onClick={[Function]}
          role="img"
        />
      </div>
      <div
        className="l3-style-clickable input-component__icon--container input-component__icon--container-has-icon search-icon l3-style-clickable--disable-text-selection"
        data-testid="clean-search-button_search"
        onClick={[Function]}
        onKeyDown={[Function]}
        onMouseDown={[Function]}
        role="button"
        tabIndex="-1"
      >
        <svg
          aria-hidden={true}
          aria-label="Clear Search"
          className="icon_component input-component__icon icon_component--no-focus-style"
          fill="currentColor"
          height="18px"
          id="search"
          onClick={[Function]}
          viewBox="0 0 20 20"
          width="18px"
        >
          <path
            clipRule="evenodd"
            d="M6.53033 5.46967C6.23744 5.17678 5.76256 5.17678 5.46967 5.46967C5.17678 5.76256 5.17678 6.23744 5.46967 6.53033L8.62562 9.68628L5.47045 12.8415C5.17756 13.1343 5.17756 13.6092 5.47045 13.9021C5.76334 14.195 6.23822 14.195 6.53111 13.9021L9.68628 10.7469L12.8415 13.9021C13.1343 14.195 13.6092 14.195 13.9021 13.9021C14.195 13.6092 14.195 13.1343 13.9021 12.8415L10.7469 9.68628L13.9029 6.53033C14.1958 6.23744 14.1958 5.76256 13.9029 5.46967C13.61 5.17678 13.1351 5.17678 12.8422 5.46967L9.68628 8.62562L6.53033 5.46967Z"
            fill="currentColor"
            fillRule="evenodd"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`Search renders correctly with id 1`] = `
<div
  aria-busy={false}
  className="input-component search_component_wrapper search__main_wrapper search__hidden"
  role="search"
>
  <div
    className="input-component__label--wrapper"
  >
    <div
      className="input-component__input-wrapper input-component__input-wrapper--size-large search-wrapper search-wrapper-hidden"
    >
      <input
        aria-activedescendant=""
        aria-invalid={null}
        aria-label=""
        aria-owns=""
        autoComplete="off"
        className="search_component input-component__input hide-text-field-component input-component__input--has-icon"
        data-testid="search_testId"
        disabled={false}
        id="testId"
        maxLength={null}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        placeholder=""
        readOnly={false}
        required={false}
        role=""
        type="search"
        value=""
      />
      <div
        className="l3-style-clickable input-component__icon--container input-component__icon--container-has-icon input-component__icon--container-active search_icon l3-style-clickable--disable-text-selection"
        data-testid="clickable"
        onClick={[Function]}
        onKeyDown={[Function]}
        onMouseDown={[Function]}
        role="button"
        tabIndex="-1"
      >
        <svg
          aria-hidden={true}
          aria-label="Search"
          className="icon_component input-component__icon icon_component--no-focus-style"
          fill="currentColor"
          height="18px"
          id="testId"
          onClick={[Function]}
          viewBox="0 0 40 40"
          width="18px"
        >
          <g
            filter="url(#filter0_bd_718_13606)"
          >
            <path
              clipRule="evenodd"
              d="M32 20C32 26.5649 26.5728 32 19.999 32C13.4368 32 8 26.5649 8 20C8 13.4256 13.4273 8 19.9894 8C26.5632 8 32 13.4256 32 20ZM13.7282 18.6793C13.7282 21.4323 15.9931 23.7028 18.7512 23.7028C19.6819 23.7028 20.5566 23.4258 21.3024 22.9767L24.2163 25.8772C24.4791 26.1475 24.7661 26.2742 25.1333 26.2742C25.7832 26.2742 26.2408 25.7878 26.2408 25.1147C26.2408 24.8162 26.1131 24.5292 25.8863 24.2951L22.9711 21.3606C23.472 20.5968 23.7763 19.6661 23.7763 18.6793C23.7763 15.9073 21.5135 13.6422 18.7512 13.6422C15.9931 13.6422 13.7282 15.9168 13.7282 18.6793ZM21.9701 18.6793C21.9701 20.4447 20.5143 21.908 18.7512 21.908C16.9807 21.908 15.5229 20.4447 15.5229 18.6793C15.5229 16.9045 16.9807 15.4412 18.7512 15.4412C20.5143 15.4412 21.9701 16.8949 21.9701 18.6793Z"
              fill="#fff"
              fillRule="evenodd"
            />
          </g>
          <defs>
            <filter
              colorInterpolationFilters="sRGB"
              filterUnits="userSpaceOnUse"
              height="60"
              id="filter0_bd_718_13606"
              width="60"
              x="-10"
              y="-10"
            >
              <feFlood
                floodOpacity="0"
                result="BackgroundImageFix"
              />
              <feGaussianBlur
                in="BackgroundImageFix"
                stdDeviation="5"
              />
              <feComposite
                in2="SourceAlpha"
                operator="in"
                result="effect1_backgroundBlur_718_13606"
              />
              <feColorMatrix
                in="SourceAlpha"
                result="hardAlpha"
                values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0"
              />
              <feOffset
                dy="1"
              />
              <feGaussianBlur
                stdDeviation="1.5"
              />
              <feColorMatrix
                values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0.2 0"
              />
              <feBlend
                in2="effect1_backgroundBlur_718_13606"
                result="effect2_dropShadow_718_13606"
              />
              <feBlend
                in="SourceGraphic"
                in2="effect2_dropShadow_718_13606"
                result="shape"
              />
            </filter>
          </defs>
        </svg>
      </div>
      <div
        className="l3-style-clickable input-component__icon--container input-component__icon--container-has-icon search-icon l3-style-clickable--disable-text-selection"
        data-testid="clean-search-button_testId"
        onClick={[Function]}
        onKeyDown={[Function]}
        onMouseDown={[Function]}
        role="button"
        tabIndex="-1"
      >
        <svg
          aria-hidden={true}
          aria-label="Clear Search"
          className="icon_component input-component__icon icon_component--no-focus-style"
          fill="currentColor"
          height="18px"
          id="testId"
          onClick={[Function]}
          viewBox="0 0 20 20"
          width="18px"
        >
          <path
            clipRule="evenodd"
            d="M6.53033 5.46967C6.23744 5.17678 5.76256 5.17678 5.46967 5.46967C5.17678 5.76256 5.17678 6.23744 5.46967 6.53033L8.62562 9.68628L5.47045 12.8415C5.17756 13.1343 5.17756 13.6092 5.47045 13.9021C5.76334 14.195 6.23822 14.195 6.53111 13.9021L9.68628 10.7469L12.8415 13.9021C13.1343 14.195 13.6092 14.195 13.9021 13.9021C14.195 13.6092 14.195 13.1343 13.9021 12.8415L10.7469 9.68628L13.9029 6.53033C14.1958 6.23744 14.1958 5.76256 13.9029 5.46967C13.61 5.17678 13.1351 5.17678 12.8422 5.46967L9.68628 8.62562L6.53033 5.46967Z"
            fill="currentColor"
            fillRule="evenodd"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`Search renders correctly with loading 1`] = `
<div
  aria-busy={true}
  className="input-component search_component_wrapper search__main_wrapper search__hidden"
  role="search"
>
  <div
    className="input-component__label--wrapper"
  >
    <div
      className="input-component__input-wrapper input-component__input-wrapper--size-large search-wrapper search-wrapper-hidden"
    >
      <input
        aria-activedescendant=""
        aria-invalid={null}
        aria-label=""
        aria-owns=""
        autoComplete="off"
        className="search_component input-component__input hide-text-field-component input-component__input--has-icon"
        data-testid="search_search"
        disabled={false}
        id="search"
        maxLength={null}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        placeholder=""
        readOnly={false}
        required={false}
        role=""
        type="search"
        value=""
      />
      <div
        className="input-component__loader--container input-component__loader--container-has-icon isSearchType"
      >
        <div
          className="input-component__loader"
        >
          <div
            className="l3-loader-component loaderContainer"
            data-testid="loader"
            role="alert"
            title="loading"
          >
            <svg
              aria-hidden={true}
              className="circle-loader-spinner circleLoaderSpinner input-component__loader-svg"
              viewBox="0 0 50 50"
            >
              <circle
                className="circleLoaderSpinnerBackground"
                cx="25"
                cy="25"
                fill="none"
                r="20"
                strokeWidth="5"
              />
              <circle
                className="circle-loader-spinner-path circleLoaderSpinnerPath"
                cx="25"
                cy="25"
                fill="none"
                r="20"
                strokeWidth="5"
              />
            </svg>
          </div>
        </div>
      </div>
      <div
        className="l3-style-clickable input-component__icon--container input-component__icon--container-has-icon input-component__icon--container-active search_icon l3-style-clickable--disable-text-selection"
        data-testid="clickable"
        onClick={[Function]}
        onKeyDown={[Function]}
        onMouseDown={[Function]}
        role="button"
        tabIndex="-1"
      >
        <svg
          aria-hidden={true}
          aria-label="Search"
          className="icon_component input-component__icon icon_component--no-focus-style"
          fill="currentColor"
          height="18px"
          id="search"
          onClick={[Function]}
          viewBox="0 0 40 40"
          width="18px"
        >
          <g
            filter="url(#filter0_bd_718_13606)"
          >
            <path
              clipRule="evenodd"
              d="M32 20C32 26.5649 26.5728 32 19.999 32C13.4368 32 8 26.5649 8 20C8 13.4256 13.4273 8 19.9894 8C26.5632 8 32 13.4256 32 20ZM13.7282 18.6793C13.7282 21.4323 15.9931 23.7028 18.7512 23.7028C19.6819 23.7028 20.5566 23.4258 21.3024 22.9767L24.2163 25.8772C24.4791 26.1475 24.7661 26.2742 25.1333 26.2742C25.7832 26.2742 26.2408 25.7878 26.2408 25.1147C26.2408 24.8162 26.1131 24.5292 25.8863 24.2951L22.9711 21.3606C23.472 20.5968 23.7763 19.6661 23.7763 18.6793C23.7763 15.9073 21.5135 13.6422 18.7512 13.6422C15.9931 13.6422 13.7282 15.9168 13.7282 18.6793ZM21.9701 18.6793C21.9701 20.4447 20.5143 21.908 18.7512 21.908C16.9807 21.908 15.5229 20.4447 15.5229 18.6793C15.5229 16.9045 16.9807 15.4412 18.7512 15.4412C20.5143 15.4412 21.9701 16.8949 21.9701 18.6793Z"
              fill="#fff"
              fillRule="evenodd"
            />
          </g>
          <defs>
            <filter
              colorInterpolationFilters="sRGB"
              filterUnits="userSpaceOnUse"
              height="60"
              id="filter0_bd_718_13606"
              width="60"
              x="-10"
              y="-10"
            >
              <feFlood
                floodOpacity="0"
                result="BackgroundImageFix"
              />
              <feGaussianBlur
                in="BackgroundImageFix"
                stdDeviation="5"
              />
              <feComposite
                in2="SourceAlpha"
                operator="in"
                result="effect1_backgroundBlur_718_13606"
              />
              <feColorMatrix
                in="SourceAlpha"
                result="hardAlpha"
                values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0"
              />
              <feOffset
                dy="1"
              />
              <feGaussianBlur
                stdDeviation="1.5"
              />
              <feColorMatrix
                values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0.2 0"
              />
              <feBlend
                in2="effect1_backgroundBlur_718_13606"
                result="effect2_dropShadow_718_13606"
              />
              <feBlend
                in="SourceGraphic"
                in2="effect2_dropShadow_718_13606"
                result="shape"
              />
            </filter>
          </defs>
        </svg>
      </div>
      <div
        className="l3-style-clickable input-component__icon--container input-component__icon--container-has-icon search-icon l3-style-clickable--disable-text-selection"
        data-testid="clean-search-button_search"
        onClick={[Function]}
        onKeyDown={[Function]}
        onMouseDown={[Function]}
        role="button"
        tabIndex="-1"
      >
        <svg
          aria-hidden={true}
          aria-label="Clear Search"
          className="icon_component input-component__icon icon_component--no-focus-style"
          fill="currentColor"
          height="18px"
          id="search"
          onClick={[Function]}
          viewBox="0 0 20 20"
          width="18px"
        >
          <path
            clipRule="evenodd"
            d="M6.53033 5.46967C6.23744 5.17678 5.76256 5.17678 5.46967 5.46967C5.17678 5.76256 5.17678 6.23744 5.46967 6.53033L8.62562 9.68628L5.47045 12.8415C5.17756 13.1343 5.17756 13.6092 5.47045 13.9021C5.76334 14.195 6.23822 14.195 6.53111 13.9021L9.68628 10.7469L12.8415 13.9021C13.1343 14.195 13.6092 14.195 13.9021 13.9021C14.195 13.6092 14.195 13.1343 13.9021 12.8415L10.7469 9.68628L13.9029 6.53033C14.1958 6.23744 14.1958 5.76256 13.9029 5.46967C13.61 5.17678 13.1351 5.17678 12.8422 5.46967L9.68628 8.62562L6.53033 5.46967Z"
            fill="currentColor"
            fillRule="evenodd"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`Search renders correctly with placeholder 1`] = `
<div
  aria-busy={false}
  className="input-component search_component_wrapper search__main_wrapper search__hidden"
  role="search"
>
  <div
    className="input-component__label--wrapper"
  >
    <div
      className="input-component__input-wrapper input-component__input-wrapper--size-large search-wrapper search-wrapper-hidden"
    >
      <input
        aria-activedescendant=""
        aria-invalid={null}
        aria-label="placeholder"
        aria-owns=""
        autoComplete="off"
        className="search_component input-component__input hide-text-field-component input-component__input--has-icon"
        data-testid="search_search"
        disabled={false}
        id="search"
        maxLength={null}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        placeholder="placeholder"
        readOnly={false}
        required={false}
        role=""
        type="search"
        value=""
      />
      <div
        className="l3-style-clickable input-component__icon--container input-component__icon--container-has-icon input-component__icon--container-active search_icon l3-style-clickable--disable-text-selection"
        data-testid="clickable"
        onClick={[Function]}
        onKeyDown={[Function]}
        onMouseDown={[Function]}
        role="button"
        tabIndex="-1"
      >
        <svg
          aria-hidden={true}
          aria-label="Search"
          className="icon_component input-component__icon icon_component--no-focus-style"
          fill="currentColor"
          height="18px"
          id="search"
          onClick={[Function]}
          viewBox="0 0 40 40"
          width="18px"
        >
          <g
            filter="url(#filter0_bd_718_13606)"
          >
            <path
              clipRule="evenodd"
              d="M32 20C32 26.5649 26.5728 32 19.999 32C13.4368 32 8 26.5649 8 20C8 13.4256 13.4273 8 19.9894 8C26.5632 8 32 13.4256 32 20ZM13.7282 18.6793C13.7282 21.4323 15.9931 23.7028 18.7512 23.7028C19.6819 23.7028 20.5566 23.4258 21.3024 22.9767L24.2163 25.8772C24.4791 26.1475 24.7661 26.2742 25.1333 26.2742C25.7832 26.2742 26.2408 25.7878 26.2408 25.1147C26.2408 24.8162 26.1131 24.5292 25.8863 24.2951L22.9711 21.3606C23.472 20.5968 23.7763 19.6661 23.7763 18.6793C23.7763 15.9073 21.5135 13.6422 18.7512 13.6422C15.9931 13.6422 13.7282 15.9168 13.7282 18.6793ZM21.9701 18.6793C21.9701 20.4447 20.5143 21.908 18.7512 21.908C16.9807 21.908 15.5229 20.4447 15.5229 18.6793C15.5229 16.9045 16.9807 15.4412 18.7512 15.4412C20.5143 15.4412 21.9701 16.8949 21.9701 18.6793Z"
              fill="#fff"
              fillRule="evenodd"
            />
          </g>
          <defs>
            <filter
              colorInterpolationFilters="sRGB"
              filterUnits="userSpaceOnUse"
              height="60"
              id="filter0_bd_718_13606"
              width="60"
              x="-10"
              y="-10"
            >
              <feFlood
                floodOpacity="0"
                result="BackgroundImageFix"
              />
              <feGaussianBlur
                in="BackgroundImageFix"
                stdDeviation="5"
              />
              <feComposite
                in2="SourceAlpha"
                operator="in"
                result="effect1_backgroundBlur_718_13606"
              />
              <feColorMatrix
                in="SourceAlpha"
                result="hardAlpha"
                values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0"
              />
              <feOffset
                dy="1"
              />
              <feGaussianBlur
                stdDeviation="1.5"
              />
              <feColorMatrix
                values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0.2 0"
              />
              <feBlend
                in2="effect1_backgroundBlur_718_13606"
                result="effect2_dropShadow_718_13606"
              />
              <feBlend
                in="SourceGraphic"
                in2="effect2_dropShadow_718_13606"
                result="shape"
              />
            </filter>
          </defs>
        </svg>
      </div>
      <div
        className="l3-style-clickable input-component__icon--container input-component__icon--container-has-icon search-icon l3-style-clickable--disable-text-selection"
        data-testid="clean-search-button_search"
        onClick={[Function]}
        onKeyDown={[Function]}
        onMouseDown={[Function]}
        role="button"
        tabIndex="-1"
      >
        <svg
          aria-hidden={true}
          aria-label="Clear Search"
          className="icon_component input-component__icon icon_component--no-focus-style"
          fill="currentColor"
          height="18px"
          id="search"
          onClick={[Function]}
          viewBox="0 0 20 20"
          width="18px"
        >
          <path
            clipRule="evenodd"
            d="M6.53033 5.46967C6.23744 5.17678 5.76256 5.17678 5.46967 5.46967C5.17678 5.76256 5.17678 6.23744 5.46967 6.53033L8.62562 9.68628L5.47045 12.8415C5.17756 13.1343 5.17756 13.6092 5.47045 13.9021C5.76334 14.195 6.23822 14.195 6.53111 13.9021L9.68628 10.7469L12.8415 13.9021C13.1343 14.195 13.6092 14.195 13.9021 13.9021C14.195 13.6092 14.195 13.1343 13.9021 12.8415L10.7469 9.68628L13.9029 6.53033C14.1958 6.23744 14.1958 5.76256 13.9029 5.46967C13.61 5.17678 13.1351 5.17678 12.8422 5.46967L9.68628 8.62562L6.53033 5.46967Z"
            fill="currentColor"
            fillRule="evenodd"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`Search renders correctly with secondaryIconName 1`] = `
<div
  aria-busy={false}
  className="input-component search_component_wrapper search__main_wrapper search__hidden"
  role="search"
>
  <div
    className="input-component__label--wrapper"
  >
    <div
      className="input-component__input-wrapper input-component__input-wrapper--size-large search-wrapper search-wrapper-hidden"
    >
      <input
        aria-activedescendant=""
        aria-invalid={null}
        aria-label=""
        aria-owns=""
        autoComplete="off"
        className="search_component input-component__input hide-text-field-component input-component__input--has-icon"
        data-testid="search_search"
        disabled={false}
        id="search"
        maxLength={null}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        placeholder=""
        readOnly={false}
        required={false}
        role=""
        type="search"
        value=""
      />
      <div
        className="l3-style-clickable input-component__icon--container input-component__icon--container-has-icon input-component__icon--container-active search_icon l3-style-clickable--disable-text-selection"
        data-testid="clickable"
        onClick={[Function]}
        onKeyDown={[Function]}
        onMouseDown={[Function]}
        role="button"
        tabIndex="-1"
      >
        <svg
          aria-hidden={true}
          aria-label="Search"
          className="icon_component input-component__icon icon_component--no-focus-style"
          fill="currentColor"
          height="18px"
          id="search"
          onClick={[Function]}
          viewBox="0 0 40 40"
          width="18px"
        >
          <g
            filter="url(#filter0_bd_718_13606)"
          >
            <path
              clipRule="evenodd"
              d="M32 20C32 26.5649 26.5728 32 19.999 32C13.4368 32 8 26.5649 8 20C8 13.4256 13.4273 8 19.9894 8C26.5632 8 32 13.4256 32 20ZM13.7282 18.6793C13.7282 21.4323 15.9931 23.7028 18.7512 23.7028C19.6819 23.7028 20.5566 23.4258 21.3024 22.9767L24.2163 25.8772C24.4791 26.1475 24.7661 26.2742 25.1333 26.2742C25.7832 26.2742 26.2408 25.7878 26.2408 25.1147C26.2408 24.8162 26.1131 24.5292 25.8863 24.2951L22.9711 21.3606C23.472 20.5968 23.7763 19.6661 23.7763 18.6793C23.7763 15.9073 21.5135 13.6422 18.7512 13.6422C15.9931 13.6422 13.7282 15.9168 13.7282 18.6793ZM21.9701 18.6793C21.9701 20.4447 20.5143 21.908 18.7512 21.908C16.9807 21.908 15.5229 20.4447 15.5229 18.6793C15.5229 16.9045 16.9807 15.4412 18.7512 15.4412C20.5143 15.4412 21.9701 16.8949 21.9701 18.6793Z"
              fill="#fff"
              fillRule="evenodd"
            />
          </g>
          <defs>
            <filter
              colorInterpolationFilters="sRGB"
              filterUnits="userSpaceOnUse"
              height="60"
              id="filter0_bd_718_13606"
              width="60"
              x="-10"
              y="-10"
            >
              <feFlood
                floodOpacity="0"
                result="BackgroundImageFix"
              />
              <feGaussianBlur
                in="BackgroundImageFix"
                stdDeviation="5"
              />
              <feComposite
                in2="SourceAlpha"
                operator="in"
                result="effect1_backgroundBlur_718_13606"
              />
              <feColorMatrix
                in="SourceAlpha"
                result="hardAlpha"
                values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0"
              />
              <feOffset
                dy="1"
              />
              <feGaussianBlur
                stdDeviation="1.5"
              />
              <feColorMatrix
                values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0.2 0"
              />
              <feBlend
                in2="effect1_backgroundBlur_718_13606"
                result="effect2_dropShadow_718_13606"
              />
              <feBlend
                in="SourceGraphic"
                in2="effect2_dropShadow_718_13606"
                result="shape"
              />
            </filter>
          </defs>
        </svg>
      </div>
      <div
        className="l3-style-clickable input-component__icon--container input-component__icon--container-has-icon search-icon l3-style-clickable--disable-text-selection"
        data-testid="clean-search-button_search"
        onClick={[Function]}
        onKeyDown={[Function]}
        onMouseDown={[Function]}
        role="button"
        tabIndex="-1"
      >
        <span
          aria-hidden={true}
          aria-label="Clear Search"
          className="icon_component input-component__icon icon_component--no-focus-style fa fa-star"
          id="search"
          onClick={[Function]}
          role="img"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Search renders correctly with underline type 1`] = `
<div
  aria-busy={false}
  className="input-component search_component_wrapper search__main_wrapper search__hidden"
  role="search"
>
  <div
    className="input-component__label--wrapper"
  >
    <div
      className="input-component__input-wrapper input-component__input-wrapper--size-large search-wrapper search-wrapper-hidden"
    >
      <input
        aria-activedescendant=""
        aria-invalid={null}
        aria-label=""
        aria-owns=""
        autoComplete="off"
        className="search_component input-component__input--only-underline input-component__input hide-text-field-component input-component__input--has-icon"
        data-testid="search_search"
        disabled={false}
        id="search"
        maxLength={null}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        placeholder=""
        readOnly={false}
        required={false}
        role=""
        type="search"
        value=""
      />
      <div
        className="l3-style-clickable input-component__icon--container input-component__icon--container-has-icon input-component__icon--container-active search_icon l3-style-clickable--disable-text-selection"
        data-testid="clickable"
        onClick={[Function]}
        onKeyDown={[Function]}
        onMouseDown={[Function]}
        role="button"
        tabIndex="-1"
      >
        <svg
          aria-hidden={true}
          aria-label="Search"
          className="icon_component input-component__icon icon_component--no-focus-style"
          fill="currentColor"
          height="18px"
          id="search"
          onClick={[Function]}
          viewBox="0 0 40 40"
          width="18px"
        >
          <g
            filter="url(#filter0_bd_718_13606)"
          >
            <path
              clipRule="evenodd"
              d="M32 20C32 26.5649 26.5728 32 19.999 32C13.4368 32 8 26.5649 8 20C8 13.4256 13.4273 8 19.9894 8C26.5632 8 32 13.4256 32 20ZM13.7282 18.6793C13.7282 21.4323 15.9931 23.7028 18.7512 23.7028C19.6819 23.7028 20.5566 23.4258 21.3024 22.9767L24.2163 25.8772C24.4791 26.1475 24.7661 26.2742 25.1333 26.2742C25.7832 26.2742 26.2408 25.7878 26.2408 25.1147C26.2408 24.8162 26.1131 24.5292 25.8863 24.2951L22.9711 21.3606C23.472 20.5968 23.7763 19.6661 23.7763 18.6793C23.7763 15.9073 21.5135 13.6422 18.7512 13.6422C15.9931 13.6422 13.7282 15.9168 13.7282 18.6793ZM21.9701 18.6793C21.9701 20.4447 20.5143 21.908 18.7512 21.908C16.9807 21.908 15.5229 20.4447 15.5229 18.6793C15.5229 16.9045 16.9807 15.4412 18.7512 15.4412C20.5143 15.4412 21.9701 16.8949 21.9701 18.6793Z"
              fill="#fff"
              fillRule="evenodd"
            />
          </g>
          <defs>
            <filter
              colorInterpolationFilters="sRGB"
              filterUnits="userSpaceOnUse"
              height="60"
              id="filter0_bd_718_13606"
              width="60"
              x="-10"
              y="-10"
            >
              <feFlood
                floodOpacity="0"
                result="BackgroundImageFix"
              />
              <feGaussianBlur
                in="BackgroundImageFix"
                stdDeviation="5"
              />
              <feComposite
                in2="SourceAlpha"
                operator="in"
                result="effect1_backgroundBlur_718_13606"
              />
              <feColorMatrix
                in="SourceAlpha"
                result="hardAlpha"
                values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0"
              />
              <feOffset
                dy="1"
              />
              <feGaussianBlur
                stdDeviation="1.5"
              />
              <feColorMatrix
                values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0.2 0"
              />
              <feBlend
                in2="effect1_backgroundBlur_718_13606"
                result="effect2_dropShadow_718_13606"
              />
              <feBlend
                in="SourceGraphic"
                in2="effect2_dropShadow_718_13606"
                result="shape"
              />
            </filter>
          </defs>
        </svg>
      </div>
      <div
        className="l3-style-clickable input-component__icon--container input-component__icon--container-has-icon search-icon l3-style-clickable--disable-text-selection"
        data-testid="clean-search-button_search"
        onClick={[Function]}
        onKeyDown={[Function]}
        onMouseDown={[Function]}
        role="button"
        tabIndex="-1"
      >
        <svg
          aria-hidden={true}
          aria-label="Clear Search"
          className="icon_component input-component__icon icon_component--no-focus-style"
          fill="currentColor"
          height="18px"
          id="search"
          onClick={[Function]}
          viewBox="0 0 20 20"
          width="18px"
        >
          <path
            clipRule="evenodd"
            d="M6.53033 5.46967C6.23744 5.17678 5.76256 5.17678 5.46967 5.46967C5.17678 5.76256 5.17678 6.23744 5.46967 6.53033L8.62562 9.68628L5.47045 12.8415C5.17756 13.1343 5.17756 13.6092 5.47045 13.9021C5.76334 14.195 6.23822 14.195 6.53111 13.9021L9.68628 10.7469L12.8415 13.9021C13.1343 14.195 13.6092 14.195 13.9021 13.9021C14.195 13.6092 14.195 13.1343 13.9021 12.8415L10.7469 9.68628L13.9029 6.53033C14.1958 6.23744 14.1958 5.76256 13.9029 5.46967C13.61 5.17678 13.1351 5.17678 12.8422 5.46967L9.68628 8.62562L6.53033 5.46967Z"
            fill="currentColor"
            fillRule="evenodd"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`Search renders correctly with validation 1`] = `
<div
  aria-busy={false}
  className="input-component search_component_wrapper search__main_wrapper search__hidden"
  role="search"
>
  <div
    className="input-component__label--wrapper"
  >
    <div
      className="input-component__input-wrapper input-component__input-wrapper--size-large input-component__input--error-validation search-wrapper search-wrapper-hidden"
    >
      <input
        aria-activedescendant=""
        aria-invalid={true}
        aria-label=""
        aria-owns=""
        autoComplete="off"
        className="search_component input-component__input hide-text-field-component input-component__input--has-icon"
        data-testid="search_search"
        disabled={false}
        id="search"
        maxLength={null}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        placeholder=""
        readOnly={false}
        required={false}
        role=""
        type="search"
        value=""
      />
      <div
        className="l3-style-clickable input-component__icon--container input-component__icon--container-has-icon input-component__icon--container-active search_icon l3-style-clickable--disable-text-selection"
        data-testid="clickable"
        onClick={[Function]}
        onKeyDown={[Function]}
        onMouseDown={[Function]}
        role="button"
        tabIndex="-1"
      >
        <svg
          aria-hidden={true}
          aria-label="Search"
          className="icon_component input-component__icon icon_component--no-focus-style"
          fill="currentColor"
          height="18px"
          id="search"
          onClick={[Function]}
          viewBox="0 0 40 40"
          width="18px"
        >
          <g
            filter="url(#filter0_bd_718_13606)"
          >
            <path
              clipRule="evenodd"
              d="M32 20C32 26.5649 26.5728 32 19.999 32C13.4368 32 8 26.5649 8 20C8 13.4256 13.4273 8 19.9894 8C26.5632 8 32 13.4256 32 20ZM13.7282 18.6793C13.7282 21.4323 15.9931 23.7028 18.7512 23.7028C19.6819 23.7028 20.5566 23.4258 21.3024 22.9767L24.2163 25.8772C24.4791 26.1475 24.7661 26.2742 25.1333 26.2742C25.7832 26.2742 26.2408 25.7878 26.2408 25.1147C26.2408 24.8162 26.1131 24.5292 25.8863 24.2951L22.9711 21.3606C23.472 20.5968 23.7763 19.6661 23.7763 18.6793C23.7763 15.9073 21.5135 13.6422 18.7512 13.6422C15.9931 13.6422 13.7282 15.9168 13.7282 18.6793ZM21.9701 18.6793C21.9701 20.4447 20.5143 21.908 18.7512 21.908C16.9807 21.908 15.5229 20.4447 15.5229 18.6793C15.5229 16.9045 16.9807 15.4412 18.7512 15.4412C20.5143 15.4412 21.9701 16.8949 21.9701 18.6793Z"
              fill="#fff"
              fillRule="evenodd"
            />
          </g>
          <defs>
            <filter
              colorInterpolationFilters="sRGB"
              filterUnits="userSpaceOnUse"
              height="60"
              id="filter0_bd_718_13606"
              width="60"
              x="-10"
              y="-10"
            >
              <feFlood
                floodOpacity="0"
                result="BackgroundImageFix"
              />
              <feGaussianBlur
                in="BackgroundImageFix"
                stdDeviation="5"
              />
              <feComposite
                in2="SourceAlpha"
                operator="in"
                result="effect1_backgroundBlur_718_13606"
              />
              <feColorMatrix
                in="SourceAlpha"
                result="hardAlpha"
                values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0"
              />
              <feOffset
                dy="1"
              />
              <feGaussianBlur
                stdDeviation="1.5"
              />
              <feColorMatrix
                values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0.2 0"
              />
              <feBlend
                in2="effect1_backgroundBlur_718_13606"
                result="effect2_dropShadow_718_13606"
              />
              <feBlend
                in="SourceGraphic"
                in2="effect2_dropShadow_718_13606"
                result="shape"
              />
            </filter>
          </defs>
        </svg>
      </div>
      <div
        className="l3-style-clickable input-component__icon--container input-component__icon--container-has-icon search-icon l3-style-clickable--disable-text-selection"
        data-testid="clean-search-button_search"
        onClick={[Function]}
        onKeyDown={[Function]}
        onMouseDown={[Function]}
        role="button"
        tabIndex="-1"
      >
        <svg
          aria-hidden={true}
          aria-label="Clear Search"
          className="icon_component input-component__icon icon_component--no-focus-style"
          fill="currentColor"
          height="18px"
          id="search"
          onClick={[Function]}
          viewBox="0 0 20 20"
          width="18px"
        >
          <path
            clipRule="evenodd"
            d="M6.53033 5.46967C6.23744 5.17678 5.76256 5.17678 5.46967 5.46967C5.17678 5.76256 5.17678 6.23744 5.46967 6.53033L8.62562 9.68628L5.47045 12.8415C5.17756 13.1343 5.17756 13.6092 5.47045 13.9021C5.76334 14.195 6.23822 14.195 6.53111 13.9021L9.68628 10.7469L12.8415 13.9021C13.1343 14.195 13.6092 14.195 13.9021 13.9021C14.195 13.6092 14.195 13.1343 13.9021 12.8415L10.7469 9.68628L13.9029 6.53033C14.1958 6.23744 14.1958 5.76256 13.9029 5.46967C13.61 5.17678 13.1351 5.17678 12.8422 5.46967L9.68628 8.62562L6.53033 5.46967Z"
            fill="currentColor"
            fillRule="evenodd"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`Search renders correctly with value 1`] = `
<div
  aria-busy={false}
  className="input-component search_component_wrapper search__main_wrapper search__hidden"
  role="search"
>
  <div
    className="input-component__label--wrapper"
  >
    <div
      className="input-component__input-wrapper input-component__input-wrapper--size-large search-wrapper search-wrapper-hidden"
    >
      <input
        aria-activedescendant=""
        aria-invalid={null}
        aria-label=""
        aria-owns=""
        autoComplete="off"
        className="search_component input-component__input hide-text-field-component input-component__input--has-icon"
        data-testid="search_search"
        disabled={false}
        id="search"
        maxLength={null}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        placeholder=""
        readOnly={false}
        required={false}
        role=""
        type="search"
        value="value"
      />
      <div
        className="l3-style-clickable input-component__icon--container input-component__icon--container-has-icon search_icon l3-style-clickable--disable-text-selection"
        data-testid="clickable"
        onClick={[Function]}
        onKeyDown={[Function]}
        onMouseDown={[Function]}
        role="button"
        tabIndex="-1"
      >
        <svg
          aria-hidden={true}
          aria-label="Search"
          className="icon_component input-component__icon icon_component--no-focus-style"
          fill="currentColor"
          height="18px"
          id="search"
          onClick={[Function]}
          viewBox="0 0 40 40"
          width="18px"
        >
          <g
            filter="url(#filter0_bd_718_13606)"
          >
            <path
              clipRule="evenodd"
              d="M32 20C32 26.5649 26.5728 32 19.999 32C13.4368 32 8 26.5649 8 20C8 13.4256 13.4273 8 19.9894 8C26.5632 8 32 13.4256 32 20ZM13.7282 18.6793C13.7282 21.4323 15.9931 23.7028 18.7512 23.7028C19.6819 23.7028 20.5566 23.4258 21.3024 22.9767L24.2163 25.8772C24.4791 26.1475 24.7661 26.2742 25.1333 26.2742C25.7832 26.2742 26.2408 25.7878 26.2408 25.1147C26.2408 24.8162 26.1131 24.5292 25.8863 24.2951L22.9711 21.3606C23.472 20.5968 23.7763 19.6661 23.7763 18.6793C23.7763 15.9073 21.5135 13.6422 18.7512 13.6422C15.9931 13.6422 13.7282 15.9168 13.7282 18.6793ZM21.9701 18.6793C21.9701 20.4447 20.5143 21.908 18.7512 21.908C16.9807 21.908 15.5229 20.4447 15.5229 18.6793C15.5229 16.9045 16.9807 15.4412 18.7512 15.4412C20.5143 15.4412 21.9701 16.8949 21.9701 18.6793Z"
              fill="#fff"
              fillRule="evenodd"
            />
          </g>
          <defs>
            <filter
              colorInterpolationFilters="sRGB"
              filterUnits="userSpaceOnUse"
              height="60"
              id="filter0_bd_718_13606"
              width="60"
              x="-10"
              y="-10"
            >
              <feFlood
                floodOpacity="0"
                result="BackgroundImageFix"
              />
              <feGaussianBlur
                in="BackgroundImageFix"
                stdDeviation="5"
              />
              <feComposite
                in2="SourceAlpha"
                operator="in"
                result="effect1_backgroundBlur_718_13606"
              />
              <feColorMatrix
                in="SourceAlpha"
                result="hardAlpha"
                values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0"
              />
              <feOffset
                dy="1"
              />
              <feGaussianBlur
                stdDeviation="1.5"
              />
              <feColorMatrix
                values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0.2 0"
              />
              <feBlend
                in2="effect1_backgroundBlur_718_13606"
                result="effect2_dropShadow_718_13606"
              />
              <feBlend
                in="SourceGraphic"
                in2="effect2_dropShadow_718_13606"
                result="shape"
              />
            </filter>
          </defs>
        </svg>
      </div>
      <div
        className="l3-style-clickable input-component__icon--container input-component__icon--container-has-icon input-component__icon--container-active search-icon l3-style-clickable--disable-text-selection"
        data-testid="clean-search-button_search"
        onClick={[Function]}
        onKeyDown={[Function]}
        onMouseDown={[Function]}
        role="button"
        tabIndex="0"
      >
        <svg
          aria-hidden={true}
          aria-label="Clear Search"
          className="icon_component input-component__icon icon_component--no-focus-style"
          fill="currentColor"
          height="18px"
          id="search"
          onClick={[Function]}
          viewBox="0 0 20 20"
          width="18px"
        >
          <path
            clipRule="evenodd"
            d="M6.53033 5.46967C6.23744 5.17678 5.76256 5.17678 5.46967 5.46967C5.17678 5.76256 5.17678 6.23744 5.46967 6.53033L8.62562 9.68628L5.47045 12.8415C5.17756 13.1343 5.17756 13.6092 5.47045 13.9021C5.76334 14.195 6.23822 14.195 6.53111 13.9021L9.68628 10.7469L12.8415 13.9021C13.1343 14.195 13.6092 14.195 13.9021 13.9021C14.195 13.6092 14.195 13.1343 13.9021 12.8415L10.7469 9.68628L13.9029 6.53033C14.1958 6.23744 14.1958 5.76256 13.9029 5.46967C13.61 5.17678 13.1351 5.17678 12.8422 5.46967L9.68628 8.62562L6.53033 5.46967Z"
            fill="currentColor"
            fillRule="evenodd"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`Search renders correctly with wrapperClassName 1`] = `
<div
  aria-busy={false}
  className="input-component testClassName search_component_wrapper search__main_wrapper search__hidden"
  role="search"
>
  <div
    className="input-component__label--wrapper"
  >
    <div
      className="input-component__input-wrapper input-component__input-wrapper--size-large search-wrapper search-wrapper-hidden"
    >
      <input
        aria-activedescendant=""
        aria-invalid={null}
        aria-label=""
        aria-owns=""
        autoComplete="off"
        className="search_component input-component__input hide-text-field-component input-component__input--has-icon"
        data-testid="search_search"
        disabled={false}
        id="search"
        maxLength={null}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        placeholder=""
        readOnly={false}
        required={false}
        role=""
        type="search"
        value=""
      />
      <div
        className="l3-style-clickable input-component__icon--container input-component__icon--container-has-icon input-component__icon--container-active search_icon l3-style-clickable--disable-text-selection"
        data-testid="clickable"
        onClick={[Function]}
        onKeyDown={[Function]}
        onMouseDown={[Function]}
        role="button"
        tabIndex="-1"
      >
        <svg
          aria-hidden={true}
          aria-label="Search"
          className="icon_component input-component__icon icon_component--no-focus-style"
          fill="currentColor"
          height="18px"
          id="search"
          onClick={[Function]}
          viewBox="0 0 40 40"
          width="18px"
        >
          <g
            filter="url(#filter0_bd_718_13606)"
          >
            <path
              clipRule="evenodd"
              d="M32 20C32 26.5649 26.5728 32 19.999 32C13.4368 32 8 26.5649 8 20C8 13.4256 13.4273 8 19.9894 8C26.5632 8 32 13.4256 32 20ZM13.7282 18.6793C13.7282 21.4323 15.9931 23.7028 18.7512 23.7028C19.6819 23.7028 20.5566 23.4258 21.3024 22.9767L24.2163 25.8772C24.4791 26.1475 24.7661 26.2742 25.1333 26.2742C25.7832 26.2742 26.2408 25.7878 26.2408 25.1147C26.2408 24.8162 26.1131 24.5292 25.8863 24.2951L22.9711 21.3606C23.472 20.5968 23.7763 19.6661 23.7763 18.6793C23.7763 15.9073 21.5135 13.6422 18.7512 13.6422C15.9931 13.6422 13.7282 15.9168 13.7282 18.6793ZM21.9701 18.6793C21.9701 20.4447 20.5143 21.908 18.7512 21.908C16.9807 21.908 15.5229 20.4447 15.5229 18.6793C15.5229 16.9045 16.9807 15.4412 18.7512 15.4412C20.5143 15.4412 21.9701 16.8949 21.9701 18.6793Z"
              fill="#fff"
              fillRule="evenodd"
            />
          </g>
          <defs>
            <filter
              colorInterpolationFilters="sRGB"
              filterUnits="userSpaceOnUse"
              height="60"
              id="filter0_bd_718_13606"
              width="60"
              x="-10"
              y="-10"
            >
              <feFlood
                floodOpacity="0"
                result="BackgroundImageFix"
              />
              <feGaussianBlur
                in="BackgroundImageFix"
                stdDeviation="5"
              />
              <feComposite
                in2="SourceAlpha"
                operator="in"
                result="effect1_backgroundBlur_718_13606"
              />
              <feColorMatrix
                in="SourceAlpha"
                result="hardAlpha"
                values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0"
              />
              <feOffset
                dy="1"
              />
              <feGaussianBlur
                stdDeviation="1.5"
              />
              <feColorMatrix
                values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0.2 0"
              />
              <feBlend
                in2="effect1_backgroundBlur_718_13606"
                result="effect2_dropShadow_718_13606"
              />
              <feBlend
                in="SourceGraphic"
                in2="effect2_dropShadow_718_13606"
                result="shape"
              />
            </filter>
          </defs>
        </svg>
      </div>
      <div
        className="l3-style-clickable input-component__icon--container input-component__icon--container-has-icon search-icon l3-style-clickable--disable-text-selection"
        data-testid="clean-search-button_search"
        onClick={[Function]}
        onKeyDown={[Function]}
        onMouseDown={[Function]}
        role="button"
        tabIndex="-1"
      >
        <svg
          aria-hidden={true}
          aria-label="Clear Search"
          className="icon_component input-component__icon icon_component--no-focus-style"
          fill="currentColor"
          height="18px"
          id="search"
          onClick={[Function]}
          viewBox="0 0 20 20"
          width="18px"
        >
          <path
            clipRule="evenodd"
            d="M6.53033 5.46967C6.23744 5.17678 5.76256 5.17678 5.46967 5.46967C5.17678 5.76256 5.17678 6.23744 5.46967 6.53033L8.62562 9.68628L5.47045 12.8415C5.17756 13.1343 5.17756 13.6092 5.47045 13.9021C5.76334 14.195 6.23822 14.195 6.53111 13.9021L9.68628 10.7469L12.8415 13.9021C13.1343 14.195 13.6092 14.195 13.9021 13.9021C14.195 13.6092 14.195 13.1343 13.9021 12.8415L10.7469 9.68628L13.9029 6.53033C14.1958 6.23744 14.1958 5.76256 13.9029 5.46967C13.61 5.17678 13.1351 5.17678 12.8422 5.46967L9.68628 8.62562L6.53033 5.46967Z"
            fill="currentColor"
            fillRule="evenodd"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`Search renders correctly without props 1`] = `
<div
  aria-busy={false}
  className="input-component search_component_wrapper search__main_wrapper search__hidden"
  role="search"
>
  <div
    className="input-component__label--wrapper"
  >
    <div
      className="input-component__input-wrapper input-component__input-wrapper--size-large search-wrapper search-wrapper-hidden"
    >
      <input
        aria-activedescendant=""
        aria-invalid={null}
        aria-label=""
        aria-owns=""
        autoComplete="off"
        className="search_component input-component__input hide-text-field-component input-component__input--has-icon"
        data-testid="search_search"
        disabled={false}
        id="search"
        maxLength={null}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        placeholder=""
        readOnly={false}
        required={false}
        role=""
        type="search"
        value=""
      />
      <div
        className="l3-style-clickable input-component__icon--container input-component__icon--container-has-icon input-component__icon--container-active search_icon l3-style-clickable--disable-text-selection"
        data-testid="clickable"
        onClick={[Function]}
        onKeyDown={[Function]}
        onMouseDown={[Function]}
        role="button"
        tabIndex="-1"
      >
        <svg
          aria-hidden={true}
          aria-label="Search"
          className="icon_component input-component__icon icon_component--no-focus-style"
          fill="currentColor"
          height="18px"
          id="search"
          onClick={[Function]}
          viewBox="0 0 40 40"
          width="18px"
        >
          <g
            filter="url(#filter0_bd_718_13606)"
          >
            <path
              clipRule="evenodd"
              d="M32 20C32 26.5649 26.5728 32 19.999 32C13.4368 32 8 26.5649 8 20C8 13.4256 13.4273 8 19.9894 8C26.5632 8 32 13.4256 32 20ZM13.7282 18.6793C13.7282 21.4323 15.9931 23.7028 18.7512 23.7028C19.6819 23.7028 20.5566 23.4258 21.3024 22.9767L24.2163 25.8772C24.4791 26.1475 24.7661 26.2742 25.1333 26.2742C25.7832 26.2742 26.2408 25.7878 26.2408 25.1147C26.2408 24.8162 26.1131 24.5292 25.8863 24.2951L22.9711 21.3606C23.472 20.5968 23.7763 19.6661 23.7763 18.6793C23.7763 15.9073 21.5135 13.6422 18.7512 13.6422C15.9931 13.6422 13.7282 15.9168 13.7282 18.6793ZM21.9701 18.6793C21.9701 20.4447 20.5143 21.908 18.7512 21.908C16.9807 21.908 15.5229 20.4447 15.5229 18.6793C15.5229 16.9045 16.9807 15.4412 18.7512 15.4412C20.5143 15.4412 21.9701 16.8949 21.9701 18.6793Z"
              fill="#fff"
              fillRule="evenodd"
            />
          </g>
          <defs>
            <filter
              colorInterpolationFilters="sRGB"
              filterUnits="userSpaceOnUse"
              height="60"
              id="filter0_bd_718_13606"
              width="60"
              x="-10"
              y="-10"
            >
              <feFlood
                floodOpacity="0"
                result="BackgroundImageFix"
              />
              <feGaussianBlur
                in="BackgroundImageFix"
                stdDeviation="5"
              />
              <feComposite
                in2="SourceAlpha"
                operator="in"
                result="effect1_backgroundBlur_718_13606"
              />
              <feColorMatrix
                in="SourceAlpha"
                result="hardAlpha"
                values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0"
              />
              <feOffset
                dy="1"
              />
              <feGaussianBlur
                stdDeviation="1.5"
              />
              <feColorMatrix
                values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0.2 0"
              />
              <feBlend
                in2="effect1_backgroundBlur_718_13606"
                result="effect2_dropShadow_718_13606"
              />
              <feBlend
                in="SourceGraphic"
                in2="effect2_dropShadow_718_13606"
                result="shape"
              />
            </filter>
          </defs>
        </svg>
      </div>
      <div
        className="l3-style-clickable input-component__icon--container input-component__icon--container-has-icon search-icon l3-style-clickable--disable-text-selection"
        data-testid="clean-search-button_search"
        onClick={[Function]}
        onKeyDown={[Function]}
        onMouseDown={[Function]}
        role="button"
        tabIndex="-1"
      >
        <svg
          aria-hidden={true}
          aria-label="Clear Search"
          className="icon_component input-component__icon icon_component--no-focus-style"
          fill="currentColor"
          height="18px"
          id="search"
          onClick={[Function]}
          viewBox="0 0 20 20"
          width="18px"
        >
          <path
            clipRule="evenodd"
            d="M6.53033 5.46967C6.23744 5.17678 5.76256 5.17678 5.46967 5.46967C5.17678 5.76256 5.17678 6.23744 5.46967 6.53033L8.62562 9.68628L5.47045 12.8415C5.17756 13.1343 5.17756 13.6092 5.47045 13.9021C5.76334 14.195 6.23822 14.195 6.53111 13.9021L9.68628 10.7469L12.8415 13.9021C13.1343 14.195 13.6092 14.195 13.9021 13.9021C14.195 13.6092 14.195 13.1343 13.9021 12.8415L10.7469 9.68628L13.9029 6.53033C14.1958 6.23744 14.1958 5.76256 13.9029 5.46967C13.61 5.17678 13.1351 5.17678 12.8422 5.46967L9.68628 8.62562L6.53033 5.46967Z"
            fill="currentColor"
            fillRule="evenodd"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;
